@@ -29,6 +29,7 @@ surface=Surface
 view=View
 atomLabels=Atom Labels
 molecule=Molecule
+electronegativityTable=Electronegativity Table
 
 # molecule names
 ammonia=ammonia
