@@ -13,7 +13,8 @@ import edu.colorado.phet.moleculepolarity.common.view.ViewProperties;
  */
 public class ViewControlPanel extends MPControlPanel {
 
-    public ViewControlPanel( final ViewProperties properties, final boolean hasMolecularDipole, final boolean hasBondType, final boolean hasAtomLabels, final String bondDipolesLabel ) {
+    public ViewControlPanel( final ViewProperties properties, final boolean hasMolecularDipole, final boolean hasBondType,
+                             final boolean hasAtomLabels, final boolean hasElectronegativityTable, final String bondDipolesLabel ) {
         super( MPStrings.VIEW );
         add( new GridPanel() {{
             setGridX( 0 ); // vertical
@@ -28,6 +29,9 @@ public class ViewControlPanel extends MPControlPanel {
             }
             if ( hasAtomLabels ) {
                 add( new PropertyCheckBox( MPStrings.ATOM_LABELS, properties.atomLabelsVisible ) );
+            }
+            if ( hasElectronegativityTable ) {
+                add( new PropertyCheckBox( MPStrings.ELECTRONEGATIVITY_TABLE, properties.electronegativityTableVisible ) );
             }
         }} );
     }
