@@ -1,3 +1,4 @@
+8/18/11 add View property and check box for "Electronegativity Table"
 8/18/11 improved rotate cursor image
 8/18/11 fix: atom labels "on" by default in "Real Molecules" tab
 # 0.00.11 (55434) Aug 18, 2011
